<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_abrir_caixa"
            android:icon="@drawable/ic_abrir_caixa"
            android:title="@string/menu_drawer_abrir_caixa" />
        <item
            android:id="@+id/nav_venda"
            android:icon="@drawable/ic_nova_venda"
            android:title="@string/menu_drawer_venda" />

        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_ver_produtos_drawer"
            android:title="@string/menu_drawer_produtos" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_drawer_perfil" />

        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_configuracoes"
            android:title="@string/menu_drawer_configuracoes" />
        <item
            android:id="@+id/nav_fechar_caixa"
            android:icon="@drawable/ic_fechar_caixa"
            android:title="@string/menu_drawer_fechar_caixa" />
    </group>


</menu>
